# umbryn-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  server.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: add_recognizer.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  THREAT_MODEL.md
eval/: README.md  corpus.jsonl  generate_corpus.py  run_eval.py
examples/: README.md  claude_desktop_config.json  cursor_mcp.json  umbryn_config.json  vscode_mcp.json
src/phi_mcp/: __init__.py  checksums.py  config.py  engine.py  entities.py  factory.py  presidio_engine.py  recognizers.py  redactor.py  regex_engine.py  server.py
src/umbryn_mcp/: __init__.py  audit.py  checksums.py  config.py  engine.py  entities.py  errors.py  factory.py  presidio_engine.py  recognizers.py  redactor.py  regex_engine.py  server.py  types.py
tests/: fakes.py  test_audit.py  test_config_factory.py  test_custom_recognizers.py  test_edge_cases.py  test_fail_closed.py  test_policy.py  test_recognizers.py  test_roundtrip.py  test_tool_contracts.py
tests_integration/: test_presidio_smoke.py  test_stdio_smoke.py
